src/Contact.scss
@import "./index.scss";

.Contact {
  background-color: $red;
  height: 100%;
  z-index: 6;
  display: flex;
  position: fixed;
  top: calc(110vh + 3rem);
  transition: top 0.5s ease-out;
  margin-left: -1rem; //Weird overflow
  width: 100%;

  @include screen-is(lg) {
    width: calc(80% + 0.6rem); //Weird space on the right...
  }

  .contact-content {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
    height: 100%;

    @include screen-is(lg) {
      flex-flow: column nowrap;
      width: 100%;
    }

    .contact-close{
      width: calc(35px + 2rem);
      height: calc(35px + 2rem);
      display: flex;
      flex-flow: row wrap;
      justify-content: center;
      align-items: center;
      cursor: pointer;
      background-color: $white;

      span {
        display: block;
        position: relative;
        z-index: 7;
        width: 35px;
        height: 2px;
        background-color: $grey;
      }
      span:first-of-type {
        transform: rotate(-45deg) translate(-11px, 11px);
        transition: 0.1s ease-out;
        transition-delay: 0.1s;
      }
      span:last-of-type {
        transform: rotate(45deg) translate(-12px, -12px);
        transition: 0.1s ease-out;
        transition-delay: 0.2s;
      }
    }

    .contact-close::after{
      content: "";
      display: block;
      position: absolute;
      z-index: 6;
      margin: 0px auto;
      width: 0px;
      height: calc(35px + 2rem);
      background-color: $light-green;
      transition: 0.2s ease;
    }
    .contact-close:hover::after {
      width: calc(35px + 2rem);
    }

    .contact-header {
      display: flex;
      flex-flow: column nowrap;
      align-items: center;
      justify-content: space-between;
      padding: 0px 1rem;
      color: $white;

      h2 {
        text-align: left;
      }

      @include screen-is(lg) {
        height: 20%;
        text-align: center;
      }
    }

    .contact-info {
      display: flex;
      flex-flow: row wrap;
      justify-content: space-between;
      align-items: flex-end;

      @include screen-is(lg) {
        flex-flow: column nowrap;
        align-items: center;
        justify-content: space-evenly;
        height: 80%;
      }

      h3 {
        color: $grey;
        padding: 2rem 1rem;
        font-size: 35px;
        text-decoration: none;

        @include screen-is(lg) {
          font-size: 60px;
          text-align: center;
        }
      }
      h3:hover {
        color: $white;
        transition: .2s ease;
      }
      span {
        color: $white;
      }
      h3::after{
        content: "";
        display: block;
        position: relative;
        top: 4px;
        width: calc(50vw - 1rem);
        height: 2px;
        background-color: $light-green;
        transition: .2s ease;

        @include screen-is(lg) {
          width: 20%;
          margin: 0px auto; //So its in the center underneath the word
        }
      }
      h3:hover::after {
        width: calc(100vw - 2rem);
        background-color: $white;

        @include screen-is(lg) {
          width: 100%;
        }
      }
    }
  }

  &.open {
    top: 0;
  }
}

